# dlt

./: .gitignore  CLAUDE.md  README.md  pyproject.toml
dlt/: cli.py  downloader.py  encoder.py  pitcher.py
docs/superpowers/plans/: 2026-06-24-dlt.md
docs/superpowers/specs/: 2026-06-24-dlt-design.md
tests/: test_cli.py  test_downloader.py  test_encoder.py  test_integration.py  test_pitcher.py
