[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "dlt"
version = "0.1.0"
description = "Transpose audio from music videos for cover band musicians"
requires-python = ">=3.10"
dependencies = [
    "yt-dlp",
    "pedalboard",
    "soundfile",
    "imageio-ffmpeg",
    "numpy",
]

[project.scripts]
dlt = "dlt.cli:main"

[project.optional-dependencies]
dev = [
    "pytest",
]
